--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ plugins {
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
 
-java {
-	sourceCompatibility = '21'
-}
+// java {
+// 	sourceCompatibility = '21'
+// }
 
 repositories {
 	mavenCentral()
